--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-typescript": "^7.26.0",
     "babel-loader": "^8.0.6",
+    "ts-loader": "^8.0.18",
+    "typescript": "^5.6.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "4.0.0",
     "webpack-cli": "^3.3.12"
